creazione sezione titolo dell'articolo

--- a/index.html
+++ b/index.html
@@ -3,3 +3,10 @@
 <head>
     <title>Una giornata al museo</title>
 </head>
+
+<!--TITOLO-->
+<body>
+    <header> 
+        <h1>Una giornata al museo</h1>
+    </header>
+</body>
