--- a/index.html
+++ b/index.html
@@ -10,3 +10,17 @@
         <h1>Una giornata al museo</h1>
     </header>
 </body>
+
+
+<!--FOOTER -le cose che ho imparato oggi- -->
+<footer>
+    <h3>Le cose che ho imparato oggi:</h3>
+    
+    <ul>
+        <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+        <li>Molti dipinti nascondono simboli e significati nascosti</li>
+        <li>Ogni opera ha una storia unica</li>
+
+    </ul>
+
+</footer>
