inserimento dicitura in fondo alla pagina con carattere speciale di copyright

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </body>
 
 
-<!--FOOTER -le cose che ho imparato oggi- -->
+<!--FOOTER -->
 <footer>
+    <!-- -le cose che ho imparato oggi + lista non ordinata-->
     <h3>Le cose che ho imparato oggi:</h3>
     
     <ul>
@@ -23,4 +24,7 @@
 
     </ul>
 
+    <!--dicitura presente in fondo alla pagina-->
+    <p>&copy; 2025 Insegnante di HTML</p>
+    
 </footer>
