spostamento chiusura tag body, era nel posto sbagliato

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <header> 
         <h1>Una giornata al museo</h1>
     </header>
-</body>
+
+
+
+<!--IMMAGINI E DIDASCALIE-->
 
 
 <!--FOOTER -->
@@ -26,5 +29,7 @@
 
     <!--dicitura presente in fondo alla pagina-->
     <p>&copy; 2025 Insegnante di HTML</p>
-    
+
 </footer>
+
+</body>
