--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
 
 <!--IMMAGINI E DIDASCALIE-->
+<main>
+    <ol>
+        <!--img 1-->
+        <li>
+            <h2>Il dipinto che mi ha colpito di più</h2>
+            <figure>
+                <img src="quadro.png" alt="Quadro con volto maschile"> 
+                    <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            </figure>
+            <p>Questo dipinto mi ha catturato per i cuoi colori intensi e per l'espressione del volto del personaggio raffigurato. &ecirc; come se raccontasse una storia senza parole.</p>
+        </li>
+
+         <!--img 2-->
+         
+    </ol>
+
+</main>
+
 
 
 <!--FOOTER -->
