inserimento immagine 2 con didascalia e sotto-paragrafo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
         </li>
 
          <!--img 2-->
-         
+         <li>
+            <h2>Un'antica scultura</h2>
+            <figure>
+                <img src="scultura.png" alt="Scultura romana in marmo"> 
+                    <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
+            </figure>
+            <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
+        </li>
+
     </ol>
 
 </main>
