corretto (molto) probabile errore: inserito il tag article e cancellato il tag per la lista numerata (<ol> e <li>)

--- a/index.html
+++ b/index.html
@@ -14,28 +14,27 @@
 
 <!--IMMAGINI E DIDASCALIE-->
 <main>
-    <ol>
+    
         <!--img 1-->
-        <li>
-            <h2>Il dipinto che mi ha colpito di più</h2>
+        <article>
+            <h2>1. Il dipinto che mi ha colpito di più</h2>
             <figure>
                 <img src="quadro.png" alt="Quadro con volto maschile"> 
                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
             </figure>
             <p>Questo dipinto mi ha catturato per i cuoi colori intensi e per l'espressione del volto del personaggio raffigurato. &ecirc; come se raccontasse una storia senza parole.</p>
-        </li>
+        </article>
 
          <!--img 2-->
-         <li>
-            <h2>Un'antica scultura</h2>
+         <article>
+            <h2>2. Un'antica scultura</h2>
             <figure>
                 <img src="scultura.png" alt="Scultura romana in marmo"> 
                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
             </figure>
             <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
-        </li>
+        </article>
 
-    </ol>
 
 </main>
 
