--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="quadro.png" alt="Quadro con volto maschile"> 
                     <figcaption>Un'opera d'arte affascinante vista nella galleria principale.</figcaption>
             </figure>
-            <p>Questo dipinto mi ha catturato per i cuoi colori intensi e per l'espressione del volto del personaggio raffigurato. &ecirc; come se raccontasse una storia senza parole.</p>
+            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio raffigurato. &Egrave; come se raccontasse una storia senza parole.</p>
         </article>
 
          <!--img 2-->
@@ -58,3 +58,5 @@
 </footer>
 
 </body>
+
+</html>
